<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".listaNoticias.BorrarActivity">

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="15sp"
        android:text="@string/seleccione"
        android:textColor="@color/verde_azul"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/recyclerView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="260dp"
        android:layout_height="188dp"
        app:layout_constraintBottom_toTopOf="@+id/btnBorrar"
        app:layout_constraintEnd_toEndOf="@+id/textView8"
        app:layout_constraintStart_toStartOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <TextView
        android:id="@+id/textView8"
        style="@style/Encabezado_ficha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/listadoNoticias"
        app:layout_constraintBottom_toTopOf="@+id/recyclerView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnCancelar"
        style="@style/boton1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnCancelar"
        app:layout_constraintBottom_toBottomOf="@+id/btnBorrar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnBorrar"
        app:layout_constraintTop_toTopOf="@+id/btnBorrar"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/btnBorrar"
        style="@style/boton1"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:text="@string/btnBorrar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnCancelar"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recyclerView" />
</androidx.constraintlayout.widget.ConstraintLayout>