<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="340dp"
    android:layout_marginStart="10dp"
    android:layout_marginEnd="10dp"
    android:background="@color/lint"
    android:orientation="vertical"
    tools:context=".listaNoticias.FichaActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="15sp"
        android:text="@string/info_obligatoria"
        android:textColor="@color/verde_azul"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/et_nombre"
        android:layout_width="389dp"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="* Titular"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_enlace"
        android:layout_width="389dp"
        android:layout_height="48dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="* Enlace"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="@+id/et_nombre"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/et_nombre"
        app:layout_constraintTop_toBottomOf="@+id/et_nombre" />

    <EditText
        android:id="@+id/et_fecha"
        android:layout_width="113dp"
        android:layout_height="48dp"
        android:ems="10"
        android:hint="* Fecha"
        android:inputType="date"
        app:layout_constraintBottom_toBottomOf="@+id/imageView4"
        app:layout_constraintEnd_toStartOf="@+id/cb_leida"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/imageView4"
        app:layout_constraintTop_toTopOf="@+id/imageView4" />

    <CheckBox
        android:id="@+id/cb_leida"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:text="@string/leido"
        app:layout_constraintBottom_toBottomOf="@+id/et_fecha"
        app:layout_constraintEnd_toStartOf="@+id/cb_favorita"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/et_fecha"
        app:layout_constraintTop_toTopOf="@+id/et_fecha" />

    <CheckBox
        android:id="@+id/cb_favorita"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:text="@string/favorito"
        app:layout_constraintBottom_toBottomOf="@+id/cb_leida"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/cb_leida"
        app:layout_constraintTop_toTopOf="@+id/cb_leida" />

    <RadioGroup
        android:id="@+id/rgr_fiabilidad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="@+id/cb_favorita"
        app:layout_constraintStart_toStartOf="@+id/imageView4"
        app:layout_constraintTop_toBottomOf="@+id/imageView4">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/ok_icon" />

        <RadioButton
            android:id="@+id/rb_fiable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:paddingRight="10dp"
            android:text="@string/fiable" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="45dp"
            android:layout_height="match_parent"
            android:src="@drawable/no_ok_icon" />

        <RadioButton
            android:id="@+id/rb_nofiable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:paddingRight="10dp"
            android:text="@string/no_fiable" />

    </RadioGroup>

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="54dp"
        android:layout_height="43dp"
        android:src="@drawable/calendar"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="@+id/et_enlace"
        app:layout_constraintTop_toBottomOf="@+id/et_enlace"
        app:layout_constraintVertical_bias="0.298" />

</androidx.constraintlayout.widget.ConstraintLayout>